# CTS_destination

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  build.bat  build_freebox.sh  build_freeboxV1.4.sh  build_out.txt  build_release.sh  config.toml  mockup_designs_pixoo64.html  mockup_phone.html  mockup_pixoo64.html  mockup_screens.html  mockup_v3_variants.html  mockup_weather.html  mockup_web.html
.cargo/: config.toml
.claude/: launch.json
data/: birthdays.json  birthdays.json.demo
pixoo64_mock/: HMI_DESIGN.md
scripts/: capture_pixoo64_gif.py
src/: config.rs  main.rs
src/api/: client.rs  mod.rs  model.rs  simulation.rs
src/cts/: client.rs  mod.rs  model.rs  simulation.rs
src/departure/: mod.rs  model.rs
src/display/: mod.rs  web.rs
src/meteoblue/: client.rs  model.rs  simulation.rs
src/pixoo64/: draw.rs  font.rs  mod.rs  renderer.rs
src/server/: mod.rs  router.rs  ws.rs
src/weather/: client.rs  model.rs  simulation.rs
src/web/: mod.rs  router.rs  ws.rs
static/: app.js  index.html  style.css
