[package]
name = "cts-departures"
version = "1.1.0"
edition = "2024"
description = "CTS departure board display"
license = "MIT"
repository = "https://github.com/jib63/CTS_destination"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["compression-gzip"] }
chrono = { version = "0.4", features = ["serde"] }
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
anyhow = "1"
futures-util = "0.3"
png = "0.17"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
